--- a/qmo2/TODO
+++ b/qmo2/TODO
@@ -1,3 +1,4 @@
+Fix QColotBtn
 drop names and flags from my windows
 Stratch TableView s
 USE G_vmin = numeric_limits<double>::max(), G_vmax = numeric_limits<double>::min();
