Prepare for new object model + cleanup
TDataSet is QObject now.
Cleanup header files.
Removed unused resource.h
Removed 'name' and flags from window/view ctors.
Copyright year adjusted.

--- a/qmo2/TODO
+++ b/qmo2/TODO
@@ -1,4 +1,4 @@
-Fix QColotBtn
+
 drop names and flags from my windows
 Stratch TableView s
-USE G_vmin = numeric_limits<double>::max(), G_vmax = numeric_limits<double>::min();
+USE G_dmin = numeric_limits<double>::max(), G_dmax = numeric_limits<double>::min();
