--- a/TODO
+++ b/TODO
@@ -1,22 +1,27 @@
-prepare to b obsoleted progam: migrate to qontrol
+Stored plot properties.
+More plot types (dot...). Qwtplot?
+Tree View.
+Hide startLoop - like fun,f
+New hier
+TDataSet::toText -- really to XML, => cut,copy,paste
+Rename action (+on paste)
+Auto create GET/SET function for my datas, create Qt properties - scripts.
 
-describing datas: val;label;value. ( where to place it? )
+
+
+migrate to qontrol
+
 iface to gnuplot data out, call gnuplot if need qr request
-callback function in TModel::run* -- or event-driven funcs
 objects: TFileInput, TFileOutput, TMovingAver, TDiff
   -- or File Source input/output
 may be new field in TClassInfo to misc flags: can f() w/o preRun..., 
     class group.. etc
 implement loading objects in so.
 handling special names, filling in TAnyDial
-data inheritance -- data infos (preprocess? macro? qt?)
-macro for filling data infos
-abitary data type -- TData ? 
 functions in data info
 
 more flexible TOutArr
 Distributions analysis + plot
-RunInfo (multiple)
 rename,cut,copy,paste+rename (clipboard textual or bin)
 vector icons (language) (may be dynamic)
 Hue on elements
