getopt processing + cleanup

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 move some logic from QMo2View to model (scheme?)
-slots in TModel linke cmds, but with "name", not elnu - for JS
+slots in TModel like cmds, but with "name", not elnu - for JS
 unify add/paste elem: param in dialog?
 unify add param/object : add_obj_param? + dialog
 View for Simulations? + unify such view
