--- a/TODO
+++ b/TODO
@@ -1,8 +1,8 @@
 New hier
 Command line (':')
 Renew /unify views for Outs, Graphs, Simulations
+Concept for current element in contatiner (Simulation ... )
 Rebreand to Qontrol
-enums with labels
 move some logic from LaboView to model (scheme?)
 slots in TModel like cmds, but with "name", not elnu - for JS
 unify add/paste elem: param in dialog?
@@ -10,6 +10,7 @@ unify add param/object : add_obj_param? + dialog
 threads in run
 RunWindow?
 Edit large arrays
+Widget for link: after new hier
 More data/controls: Font, Date, Time
 Plot data structure + convert old
 Current object in container / alias ?
@@ -25,14 +26,13 @@ order -> only hint?
 source choose widget
 js edit widget + button/dialog
 js preRun, preLoop
-
+Really remove TElmLink
 
 
 
 iface to gnuplot data out, call gnuplot if need qr request
 objects: TFileInput, TFileOutput, TMovingAver, TDiff
   -- TSum8, TDefuzzy, TQuality (TCriterion is busy/TCrit)
-  -- TRelaxGenerator
   -- or File Source input/output
 may be new field in TClassInfo to misc flags: can f() w/o preRun..., 
     class group.. etc
