--- a/TODO
+++ b/TODO
@@ -2,26 +2,26 @@ Propagate modified flag up to root?
 Application config: to TDataSet?
 
 Rebreand to Qontrol
+JS run dialog. + pr JS function
+global log?
 Set more data while object creation
+Adjustable labels on object buttons
 
-create and save plot function + js
 LaboWin::initDirs?
-Sub simulation? / set of dialoged values before run
-TOutArr:  actions to manual fill/get + statistic
-Add to model object: common params
+Sub simulation? / set of dialog-ed values before run
+TOutArr:  + statistic
+Add to model object: common parameters
 Add to model object: functions
 
-call parent post_set (if req). flag?
+Call parent post_set (if req). flag?
 Input/output elements/scheme properties (in0?)
 Move TCorrAnal, TFourier direct access to arrays with post-run js?
 Command line (':')
-move some logic from LaboView to model (scheme?, runner?) (ENGINE?)
-slots in TModel like cmds, but with "name", not elnu - for JS
 unify add/paste elem: param in dialog?
 unify add param/object : add_obj_param? + dialog
 RunWindow?
 Edit large arrays
-Widget for link: after new hier
+Widget for link: after new hierarchy
 More data/controls: Font, Date, Time
 run w/o interface fun:
 TCircBuf + TDelay re*
@@ -29,7 +29,6 @@ Hide startLoop - like fun,f
 Auto create GET/SET function for my datas, create Qt properties - scripts. ?
 order -> only hint?
 js/large text edit widget + button/dialog + external editor?
-js preRun, preLoop
 Tests
 
 
