--- a/TODO
+++ b/TODO
@@ -1,10 +1,8 @@
 BUG: scale in MglView (rework)
-Struct StatData1 + properties + register in JS + funcs + TStat1
-Move TCorrAnal, TFourier direct access to arrays with post-run js? rm TFourier
-TOutArr:  + statistic
 Output file + View
 Autocorrelation?
 TeX-alike simple labels LabelTeX
+Widget for link: after new hierarchy
 
 Propagate modified flag up to root?
 Application config: to TDataSet?
@@ -16,28 +14,28 @@ Set more data while object creation
 
 LaboWin::initDirs?
 Sub simulation? / set of dialog-ed values before run
-Add to model object: common parameters
-Add to model object: functions
+Add to model object: common parameters. Is really need? Use params in model/scheme/simulation
+Add to model object: functions? but what?
 
 Call parent post_set (if req). flag?
 Input/output elements/scheme properties (in0?)
-Command line (':')
+Command line (':') - or goo JS dialog.
 unify add/paste elem: param in dialog?
 unify add param/object : add_obj_param? + dialog
 RunWindow?
 Edit large arrays
-Widget for link: after new hierarchy
 More data/controls: Font, Date, Time
 run w/o interface fun:
 TCircBuf + TDelay re*
 Hide startLoop - like fun,f
-Auto create GET/SET function for my datas, create Qt properties - scripts. ?
+Auto create GET/SET function for my datas, create Qt properties - scripts. ? FAIL?
 order -> only hint?
-js/large text edit widget + button/dialog + external editor?
+js/large text edit widget + button/dialog + external editor (partial done)?
 Tests
 
 
-objects: TFileInput, TFileOutput, TMovingAver, TDiff
+objects: TFileInput, TFileOutput, TSoundInput, -- or IO in model
+  TMovingAver, TDiff
   -- TSum8, TDefuzzy, TQuality (TCriterion is busy/TCrit)
   -- Rastrigin and more
   -- or File Source input/output
