Add iface: maps prm[01] to parameters.
Iface only for now!

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+Map prm0, prm1 to any param
 Copy/paste plots, outs.
 Common selection elems/outs/plots?
 Inputs - may be Elements? like TFileSource?
