Attems to forward cations to SchemeView.
Some bugs with active/current MDI window appaers.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 Subschemes.
 Shadow main scheme.
+BUG: hang while File::open. ??
+BUG: must close scheme... windows if closed model.
+BUG: model marked modified while run with submodels. (add shadow flag?)
 Check: when to reset model?
 modified flag fomr LoboDoc to rootdata
 Check: update link values only after step - prep for multi-threading
