Add Q_CLASSINFO( "nameHintBase",  "xxxx_" );

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 Subscheme libs.
+Selections in views/document
 Shadow main scheme?
 Create Action fun + subclass QAction? (menu to place, flags)
 Controlled Scheme size.
